--- a/index.html
+++ b/index.html
@@ -29,18 +29,19 @@
     integrity="sha512-C63V0mFzwl8KV2fRz0QJNKX0d9877urOLSUq5WUq8nUOhDl69hKdGr9mAvl57k47GNjqEMAtiufsvDnk7xs8+w==" crossorigin="anonymous" referrerpolicy="no-referrer"></script>
     
     <script src="mint.js" type="module"></script>
-    <script src="main.js" type="module"></script>
-    <script src="connection.js" type="module"></script>
+    <script src="main.js" type="module"></script>    
 
     <script src="./redux/constants.js" type="module"></script>
+    <script src="./redux/actions/mintActions.js" type="module"></script>
     <script src="./redux/actions/walletActions.js" type="module"></script>
     <script src="./redux/actions/web3Actions.js" type="module"></script>    
+    <script src="./redux/reducers/mintReducer.js" type="module"></script>
     <script src="./redux/reducers/walletReducer.js" type="module"></script>
     <script src="./redux/reducers/web3Reducer.js" type="module"></script>
     <script src="./redux/store.js" type="module"></script>
     <script src="web3.js" type="module"></script>
 
-    <script src="./binds/connect-button.js" type="module"></script>
+    <script src="./components/connect-button.js" type="module"></script>
 
     
     <title>RFC</title>
