--- a/index.html
+++ b/index.html
@@ -27,6 +27,7 @@
       integrity="sha512-6WJ7yVV5HDZwZ0RT5CM3FCTgTt5qC5BlfQ9bG43y0BowT5a3GXQqDYaoZgCk+i9vuB1Yj6KdBPQAU8Ra7tV32w==" crossorigin="anonymous" referrerpolicy="no-referrer"></script>    
     <script src="https://cdnjs.cloudflare.com/ajax/libs/web3/1.7.0/web3.min.js" 
     integrity="sha512-C63V0mFzwl8KV2fRz0QJNKX0d9877urOLSUq5WUq8nUOhDl69hKdGr9mAvl57k47GNjqEMAtiufsvDnk7xs8+w==" crossorigin="anonymous" referrerpolicy="no-referrer"></script>
+    <script src='https://cdn.jsdelivr.net/npm/bignumber.js@9.0.2/bignumber.min.js'></script>
     
     <script src="mint.js" type="module"></script>
     <script src="main.js" type="module"></script>    
@@ -123,7 +124,7 @@
                         But hey! it's not only about money! it's about building and rising together so the longer you hold, the more gain in value you will get: holders only crypto/NFT events, learn how to build projects in the NFT space, private alpha chat groups, and many more benefits.. so mint your Royal falcon and join us in building and becoming the strongest NFT club in the region.</p>
                     <a href="roadmap.html" class="cta-btn"> <span>The roadmap...probably nothing!</span> 😉
                         <span><i class='bx bx-arrow-back'></i></span></a> 
-                    <div class="mint-stepper">
+                    <div id="mint_section_LL" class="mint-stepper">
                         <div class="stepper-wrapper">
                             <button id="decrease_button_LL" class="stepper-btns">
                                 <i class='bx bx-minus'></i>
