connecting button in mobile working too

--- a/index.html
+++ b/index.html
@@ -74,7 +74,7 @@
                     <a href="index.html#faqs">faq</a>
                 </li>
             </ul>
-            <button class="connect-wallet in-nav">connect wallet</button>
+            <button class="connect-wallet in-nav connect_wallet_LL">connect wallet</button>
             <address>
                 <p>the <span>royal falcon</span> club</p>
                 <div class="social-links">
@@ -104,7 +104,7 @@
                 <b class="beta">Beta Version</b>
             </div>
             <div class="d-flex align-items-center">
-                <button id="connect_button_LL" class="connect-wallet in-header">connect wallet</button>
+                <button id="connect_button_LL" class="connect-wallet in-header connect_wallet_LL">connect wallet</button>
                 <div class="sandwich-nav">
                     <span>MENU</span>
                     <div class="sandwich-btn circle" id="sandwich-btn" data-dist="7"> <span></span> <span></span> </div>
