--- a/index.html
+++ b/index.html
@@ -138,6 +138,8 @@
                             mint now
                         </button>
                     </div>
+                    
+                    <h3 id="mainnet_title_LL" style="color: white; display: none"> </br></br>Please Switch to eth mainnet</h3>
                 </div>
                 <div class="image-slider-container">
                     <div class="slider-container">
