fix ui not updating when wallet is disconnected

--- a/index.html
+++ b/index.html
@@ -140,7 +140,7 @@
                     </div>
                     
                     <h3 id="mainnet_title_LL" style="color: white; display: none"> </br></br>Please Switch to eth mainnet</h3>
-                    <h6 id="not_listed_title_LL" style="color: rgb(255, 210, 11); display: none"> </br></br>sorry you are not part of the Gold/white list</h6>
+                    <h6 id="not_listed_title_LL" style="color: rgb(255, 210, 11); display: none"> </br></br>sorry you are not part of the gold/white list</h6>
                     <h6 id="max_mint_title_LL" style="color: rgb(255, 210, 11); display: none"> </br></br>sorry you reached max mint amount for this mint</h6>
 
                 </div>
